[package]
name = "webfuse"
version = "0.1.0"
authors = ["Maxim Kosterov <maxim.kosterov@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.5.3"
clap = "2.33.3"
anyhow = "1.0.40"
thiserror = "1.0.24"
beau_collector = "0.2.1"